z-index issues fixed

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -2,7 +2,6 @@
 
 .footer {
     position: relative;
-    z-index: 11;
 
     max-width: calc($magic-number * 22);
     margin: auto;
