--- a/src/components/Journals/journals-small.scss
+++ b/src/components/Journals/journals-small.scss
@@ -59,7 +59,6 @@
         background-color: $background-color;
 
         transform: translate(0%, -50%) translateZ(0);
-        z-index: -2;
         overflow: hidden;
         border-radius: 0 $border-radius $border-radius 0;
 
